<resources>
    <string name="app_name">Feeds</string>
    <string name="feeds_icon">Feeds icon</string>
    <string name="explore_the_app">Explore the app</string>
    <string name="now_your_comms_are_in_one_place_and_always_under_control"><![CDATA[Now your comms. are in one place and always under control]]></string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create account</string>
    <string name="username">username</string>
    <string name="username_start_upper">Username</string>
    <string name="email">email</string>
    <string name="email_start_upper">Email</string>
    <string name="password_start_upper">Password</string>
    <string name="password">password</string>
    <string name="confirm_password_start_upper">Confirm password</string>
    <string name="repeat_password_hint">repeat password</string>
    <string name="must_be_8_characters">must be 8 characters</string>
    <string name="create_account_header">Create account</string>
    <string name="create_button_text">Create</string>
    <string name="black_star_icon">Black star icon</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email address</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="hi_welcome">Hi, Welcome!👋</string>
    <string name="password_mismatch">Password mismatch!</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="password_length_too_short_start_upper">Password length too short</string>
    <string name="write">Write</string>
    <string name="send_message">send message</string>
</resources>