<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/black_star"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/black_star_icon"
            android:src="@drawable/black_star_png"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_account_label"
            app:layout_constraintStart_toEndOf="@id/create_account_label"
            app:layout_constraintHorizontal_bias="1.0"/>

        <TextView
            android:id="@+id/create_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:layout_marginTop="34dp"
            android:text="@string/create_account_header"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/black_star"
            app:layout_constraintBottom_toTopOf="@id/username_label"/>

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_start_upper"
            app:layout_constraintTop_toBottomOf="@id/create_account_label"
            app:layout_constraintBottom_toTopOf="@id/username_editText"
            app:layout_constraintEnd_toEndOf="@id/username_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/username_editText" />

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:autofillHints="Username"
            android:inputType="text"
            android:hint="@string/username"
            android:background="@drawable/custom_edit_text"
            app:layout_constraintTop_toBottomOf="@id/username_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/email_label"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/email_start_upper"
            app:layout_constraintBottom_toTopOf="@id/email_editText"
            app:layout_constraintEnd_toEndOf="@id/email_editText"
            app:layout_constraintTop_toBottomOf="@id/username_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/email_editText" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:autofillHints="Email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/custom_edit_text"
            app:layout_constraintTop_toBottomOf="@id/email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_label"/>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/password_start_upper"
            app:layout_constraintBottom_toTopOf="@id/password_editTextLayout"
            app:layout_constraintEnd_toEndOf="@id/password_editTextLayout"
            app:layout_constraintTop_toBottomOf="@id/email_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/password_editTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_editTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/hint_grey_color"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/confirm_password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_label"
            app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:autofillHints="Password"
                    android:inputType="textPassword"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/must_be_8_characters" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/confirm_password_start_upper"
            app:layout_constraintBottom_toTopOf="@id/confirm_password_editTextLayout"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_editTextLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/confirm_password_editTextLayout"
            app:layout_constraintTop_toBottomOf="@id/password_editTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_editTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/hint_grey_color"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/create_account_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_label"
            app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="Password"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/repeat_password_hint"
                    android:inputType="textPassword"
                    android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/signup_progress_bar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ripple_black_button_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/create_account_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/create_account_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/create_button_text"
            android:visibility="visible"
            android:onClick="addNewUser"
            android:background="@drawable/ripple_black_button_background"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_editTextLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lin_layout"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/lin_layout"
            android:layout_marginBottom="46dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/already_have_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account" />

                <TextView
                    android:id="@+id/go_to_login_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="0dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/log_in"
                    android:textStyle="bold"
                    android:onClick="goToSignInScreen"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>