<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

        <ImageView
            android:id="@+id/black_star"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/black_star_icon"
            android:src="@drawable/black_star_png"
            app:layout_constraintBottom_toTopOf="@id/hi_welcome_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/hi_welcome_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hi_welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="100dp"
            android:text="@string/hi_welcome"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/login_email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/black_star" />

        <TextView
            android:id="@+id/login_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/email_address"
            app:layout_constraintBottom_toTopOf="@id/login_email_editText"
            app:layout_constraintEnd_toEndOf="@id/login_email_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/login_email_editText"
            app:layout_constraintTop_toBottomOf="@id/hi_welcome_label" />

        <EditText
            android:id="@+id/login_email_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:autofillHints="Email"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/login_password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_label" />

        <TextView
            android:id="@+id/login_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/password_start_upper"
            app:layout_constraintBottom_toTopOf="@id/login_password_editTextLayout"
            app:layout_constraintEnd_toEndOf="@id/login_password_editTextLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/login_password_editTextLayout"
            app:layout_constraintTop_toBottomOf="@id/login_email_editText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_editTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/hint_grey_color"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/log_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_label"
            app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="Password"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/signin_progress_bar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ripple_black_button_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/log_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/log_in_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/ripple_black_button_background"
            android:onClick="signInUser"
            android:text="@string/log_in"
            app:layout_constraintBottom_toTopOf="@id/lin_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_editTextLayout" />

        <LinearLayout
            android:id="@+id/lin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="46dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_in_button">

                <TextView
                    android:id="@+id/do_not_have_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:id="@+id/go_to_signup_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="goToSignUpScreen"
                    android:paddingStart="0dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/sign_up"
                    android:textStyle="bold" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>